--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -62,7 +62,7 @@
     <form [formGroup]="filterForm">
       <div *ngFor="let key of filterKeys" class="mb-3 filter-group">
         <h6 class="m-0">{{key}}</h6>
-        <div formArrayName="{{key}}">
+        <!-- <div formArrayName="{{key}}">
           <div *ngFor="let option of filterForm.get(key)['controls']; let i = index">
             <small formGroupName="{{i}}">
               <mat-checkbox color="primary" [formControl]="option.get('selected')" class="mr-3">
@@ -70,7 +70,7 @@
               </mat-checkbox>
             </small>
           </div>
-        </div>
+        </div> -->
       </div>
     </form>
   </div>
