--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -62,15 +62,18 @@
     <form [formGroup]="filterForm">
       <div *ngFor="let key of filterKeys" class="mb-3 filter-group">
         <h6 class="m-0">{{key}}</h6>
-        <!-- <div formArrayName="{{key}}">
+        <div formArrayName="{{key}}">
           <div *ngFor="let option of filterForm.get(key)['controls']; let i = index">
+            length: {{ option.length}}
+            <!-- <ng-template >
             <small formGroupName="{{i}}">
               <mat-checkbox color="primary" [formControl]="option.get('selected')" class="mr-3">
                 {{option.get("term").value}} ({{option.get("count").value}})
               </mat-checkbox>
             </small>
+            </ng-template> -->
           </div>
-        </div> -->
+        </div>
       </div>
     </form>
   </div>
