--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -65,13 +65,13 @@
         <div formArrayName="{{key}}">
           <div *ngFor="let option of filterForm.get(key)['controls']; let i = index">
             length: {{ filterForm.get(key)['controls'].length}}
-            <!-- <ng-template >
+            <ng-template *ngIf="filterForm.get(key)['controls'].length">
             <small formGroupName="{{i}}">
               <mat-checkbox color="primary" [formControl]="option.get('selected')" class="mr-3">
                 {{option.get("term").value}} ({{option.get("count").value}})
               </mat-checkbox>
             </small>
-            </ng-template> -->
+            </ng-template>
           </div>
         </div>
       </div>
