--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -66,7 +66,7 @@
           <div *ngFor="let option of filterForm.get(key)['controls']; let i = index">
             <small formGroupName="{{i}}">
               <mat-checkbox color="primary" [formControl]="option.get('selected')" class="mr-3">
-                {{option.get("term").value}} ({{option.get("count").value}})
+                {{option.get("name").value ? option.get("name").value : option.get("term").value}} ({{option.get("count").value}})
               </mat-checkbox>
             </small>
           </div>
