add in default links

--- a/sample-viewer/src/app/dataset-page/dataset-page-nav/dataset-page-nav.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page-nav/dataset-page-nav.component.html
@@ -7,4 +7,14 @@
       <a class="link" [routerLink]="['/download/' + id]">Download data</a>
     </li>
   </ul>
+  <ng-template #default>
+    <ul class="level0">
+      <li *ngFor="let link of links['default']">
+        <a class="link" [routerLink]="['../', id]" [fragment]="link.key" (click)="onAnchorClick(link.key)">{{link.name}}</a>
+      </li>
+      <li>
+        <a class="link" [routerLink]="['/download/' + id]">Download data</a>
+      </li>
+    </ul>
+  </ng-template>
 </nav>
