--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -47,7 +47,7 @@
 
       <div id="files">
         <h3 class="download-link">
-          <a class="link" [routerLink]="['/download/' + id]">Download data</a>
+          <a class="link" [routerLink]="['/download/' + dataset.identifier]">Download data</a>
         </h3>
       </div>
 
